Issue #14107: fix bigmem tests on str.capitalize(), str.swapcase() and str.title(). Compute correctly how much memory is required for the test (memuse).